WFLY-3854 make build work on JDK9 b175+